--- a/templates/reportes/contables/seguimiento_cheques.html
+++ b/templates/reportes/contables/seguimiento_cheques.html
@@ -423,7 +423,7 @@ var tabla2 = $('#dataTables-cartera').DataTable({
             };
             
             pageTotal = api.column(5, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
-            $( api.column(5).footer() ).html('$'+pageTotal.toLocaleString());      
+            $( api.column(5).footer() ).html('$'+pageTotal.toLocaleString(undefined,{minimumFractionDigits:2}));      
          
         }
         });
@@ -577,7 +577,7 @@ var tabla3 = $('#dataTables-cobrados').DataTable({
             };
             
             pageTotal = api.column(5, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
-            $( api.column(5).footer() ).html('$'+pageTotal.toLocaleString());      
+            $( api.column(5).footer() ).html('$'+pageTotal.toLocaleString(undefined,{minimumFractionDigits:2}));      
          
         }
         });
@@ -731,7 +731,7 @@ var tabla4 = $('#dataTables-pagados').DataTable({
             };
             
             pageTotal = api.column(4, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
-            $( api.column(4).footer() ).html('$'+pageTotal.toLocaleString());      
+            $( api.column(4).footer() ).html('$'+pageTotal.toLocaleString(undefined,{minimumFractionDigits:2}));      
          
         }
         });
@@ -906,7 +906,7 @@ var tabla = $('#dataTables-cheques').DataTable({
               };
               
               pageTotal = api.column(5, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
-              $( api.column(5).footer() ).html('$'+pageTotal.toLocaleString());      
+              $( api.column(5).footer() ).html('$'+pageTotal.toLocaleString(undefined,{minimumFractionDigits:2}));      
          
             }
         });
