--- a/templates/reportes/cta_cte/cta_cte_clientes.html
+++ b/templates/reportes/cta_cte/cta_cte_clientes.html
@@ -274,11 +274,11 @@ var tabla = $('#dataTables-cpb_venta').DataTable({
                         
             
             pageTotal1 = api.column(4, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );            
-            $( api.column(4).footer() ).html('$'+pageTotal1.toLocaleString());
+            $( api.column(4).footer() ).html('$'+pageTotal1.toLocaleString(undefined,{minimumFractionDigits:2}));
             pageTotal2 = api.column(5, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );            
-            $( api.column(5).footer() ).html('$'+pageTotal2.toLocaleString());            
+            $( api.column(5).footer() ).html('$'+pageTotal2.toLocaleString(undefined,{minimumFractionDigits:2}));            
             pageTotal = pageTotal1 - pageTotal2;
-            $( api.column(6).footer() ).html('$'+pageTotal.toLocaleString());       
+            $( api.column(6).footer() ).html('$'+pageTotal.toLocaleString(undefined,{minimumFractionDigits:2}));       
             },
                                   
         });
