--- a/templates/reportes/contables/cuentas.html
+++ b/templates/reportes/contables/cuentas.html
@@ -206,11 +206,11 @@ var tabla = $('#dtCuentas').DataTable({
                 }
             };            
             pageTotal = api.column(2, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
-            $( api.column(2).footer() ).html('$'+pageTotal.toLocaleString());                       
+            $( api.column(2).footer() ).html('$'+pageTotal.toLocaleString(undefined,{minimumFractionDigits:2}));                       
              pageTotal = api.column(3, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
-            $( api.column(3).footer() ).html('$'+pageTotal.toLocaleString());   
+            $( api.column(3).footer() ).html('$'+pageTotal.toLocaleString(undefined,{minimumFractionDigits:2}));   
              pageTotal = api.column(4, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
-            $( api.column(4).footer() ).html('$'+pageTotal.toLocaleString());   
+            $( api.column(4).footer() ).html('$'+pageTotal.toLocaleString(undefined,{minimumFractionDigits:2}));   
         }
         });
 
