--- a/templates/menues.html
+++ b/templates/menues.html
@@ -296,7 +296,7 @@
                       {% endif %}
                       {% if 'rep_retenciones_imp' in permisos_grupo %}                      
                       <li>
-                        <a href="{% url 'reporte_retenciones_imp' %}"><i class="icon-bar-chart"></i>Reporte Retenciones/Percepciones</a>
+                        <a href="{% url 'reporte_retenciones_imp' %}"><i class="icon-bar-chart"></i>Reporte Retenc./Percepc./Impuestos</a>
                       </li> 
                       {% endif %}
                      {% endif %}
