--- a/templates/egresos/compras/cpb_compra_form.html
+++ b/templates/egresos/compras/cpb_compra_form.html
@@ -83,7 +83,7 @@
 
 								</div>
 							</div>
-							<hr>				    
+							<br>				    
 						     <div class="row">
 						         <div class="col-sm-12">                          
 						                
@@ -244,11 +244,12 @@
 							         		<div class="col-sm-8 col-xs-7"><span class="totales_comprobante">Total Perc./Imp.</span></div> <div class="col-sm-4 col-xs-5">{% bootstrap_field form.importe_perc_imp show_label=False%}</div> 
 							         	</div>
 							         	<div class="col-xs-12"> 
-							         		<div class="col-sm-8 col-xs-7"><span class="totales_comprobante">Total Comprobante</span></div> <div class="col-sm-4 col-xs-5">{% bootstrap_field form.importe_total show_label=False%}</div> 
+							         		<div class="col-sm-8 col-xs-7"><span class="totales_comprobante">Total NG</span></div> <div class="col-sm-4 col-xs-5">{% bootstrap_field form.importe_no_gravado show_label=False%}</div> 
 							         	</div>
+							         	<br>
 							         	<div class="col-xs-12"> 
-							         		<div class="col-sm-8 col-xs-7"><span class="totales_comprobante">Total Pagos</span></div> <div class="col-sm-4 col-xs-5">{% bootstrap_field form.importe_cobrado show_label=False%}</div> 
-							         	</div>
+							         		<div class="col-sm-8 col-xs-7"><span class="totales_comprobante">Total Comprobante</span></div> <div class="col-sm-4 col-xs-5">{% bootstrap_field form.importe_total show_label=False%}</div> 
+							         	</div>							         	
 							         	 
 							        </div>
 						    
