--- a/templates/ingresos/ventas/cpb_venta_form.html
+++ b/templates/ingresos/ventas/cpb_venta_form.html
@@ -88,7 +88,7 @@
 								</div>
 							</div>
 							
-				    
+				    		<br>
 						     <div class="row">
 						         <div class="col-sm-12">                          						                
 						                <table id="id_forms_table" width="100%" class="table tabla table-condensed tabla_listado">
@@ -247,12 +247,13 @@
 							         	</div>
 							         	<div class="col-xs-12">
 							         		<div class="col-sm-8 col-xs-7"><span class="totales_comprobante">Total Perc./Imp.</span></div> <div class="col-sm-4 col-xs-5">{% bootstrap_field form.importe_perc_imp show_label=False%}</div> 
+							         	</div>							         	
+							         	<div class="col-xs-12"> 
+							         		<div class="col-sm-8 col-xs-7"><span class="totales_comprobante">Total NG</span></div> <div class="col-sm-4 col-xs-5">{% bootstrap_field form.importe_no_gravado show_label=False%}</div> 
 							         	</div>
+							         	<br>
 							         	<div class="col-xs-12"> 
 							         		<div class="col-sm-8 col-xs-7"><span class="totales_comprobante">Total Comprobante</span></div> <div class="col-sm-4 col-xs-5">{% bootstrap_field form.importe_total show_label=False%}</div> 
-							         	</div>
-							         	<div class="col-xs-12"> 
-							         		<div class="col-sm-8 col-xs-7"><span class="totales_comprobante">Total Cobros</span></div> <div class="col-sm-4 col-xs-5">{% bootstrap_field form.importe_cobrado show_label=False%}</div> 
 							         	</div>
 							         	 
 							        </div>
