--- a/templates/general/facturas/factura.html
+++ b/templates/general/facturas/factura.html
@@ -157,7 +157,7 @@
         <td width="10%"></td>
         <td width="30%" class=" texto_firma">Transportista</td>    
         <td width="20%" class=" "></td>
-        <td width="30%" class="texto_firma">CUIT</td>
+        <td width="30%" class="texto_firma"></td>
         <td width="10%"></td>
       </tr>
       <tr>
