--- a/templates/ingresos/remitos/cpb_remito_form.html
+++ b/templates/ingresos/remitos/cpb_remito_form.html
@@ -137,7 +137,7 @@
 	                    <div class="row">
 		                    <div class="col-xs-12">                                                        
 		                     <a href="{% url 'cpb_remito_listado' %}" class="btn pull-left btn red-flamingo"><i class="fa fa-times"></i> Cancelar </a>
-		                     <button id="GuardarRemito" class="btn pull-right blue"> Guardar </button>
+		                     <button id="GuardarRemito" class="btn pull-right color_barra"> Guardar </button>
 
 		                    </div>
 	                   </div>
