--- a/templates/header.html
+++ b/templates/header.html
@@ -52,9 +52,11 @@
               </div>
           </ul>
         </li>
+        {% if not sitio_mobile %}  
         <li class="hidden-xs">   
           <a href="mailto:{{EMAIL_CONTACTO}}" title="Contacto/Enviar Consultas"><i class="icono_mail icon-envelope"></i></a>
         </li>
+        {% endif %}
       </ul>      
     </div>
 
