--- a/templates/menues_mobile.html
+++ b/templates/menues_mobile.html
@@ -82,7 +82,7 @@
                                             <a href="javascript:;">FINANZAS <span class="arrow"></span></a>                                                
                                             <ul class="sub-menu">
                                                 <li>{% if 'cpb_mov_abm' in permisos_grupo %}
-                                                    <a href="{% url 'movimientos_listado' %}"><i class="icon-shuffle"></i>>Movimientos entre Cuentas</a>
+                                                    <a href="{% url 'movimientos_listado' %}"><i class="icon-shuffle"></i>Movimientos entre Cuentas</a>
                                                 </li> {% endif %}                                                      
                                             </ul>
                                         </li>
