--- a/templates/base.html
+++ b/templates/base.html
@@ -102,10 +102,17 @@
                           toastr.{{ message.tags }}('{{ message }}');                                        
               {% endfor %}
             {% endif %}    
+
         });
       </script> 
       {% block extra_js_final %}
       {% endblock extra_js_final %} 
-
+      
+       {% if empresa.afip_categoria %}
+        <script type="text/javascript">
+           alertify.warningAlert("<b>Su abono Mensual se encuentra Vencido.<br>Por favor comunicarse a los teléfonos de la Empresa.<br>¡Muchas Gracias!</b>");
+           {% endif %}  
+           </script>   
+           {{empresa.afip_categoria}}    
 
 </html>
