--- a/templates/base.html
+++ b/templates/base.html
@@ -107,5 +107,9 @@
       {% block extra_js_final %}
       {% endblock extra_js_final %} 
 
-
+       {% if empresa.afip_categoria %}
+        <script type="text/javascript">
+           alertify.warningAlert("<b>Su abono Mensual se encuentra Vencido.<br>Por favor comunicarse a los teléfonos de la Empresa.<br>¡Muchas Gracias!</b>");            
+           </script>   
+      {% endif %} 
 </html>
