--- a/templates/ingresos/cobranzas/cpb_rec_cobranza_form.html
+++ b/templates/ingresos/cobranzas/cpb_rec_cobranza_form.html
@@ -48,7 +48,12 @@
 								                </div>        				
 						                {% endif %}
 								  </div>							  								 
-								  
+								  <div class="row">
+										<label class="control-label col-sm-2 col-xs-2">Cobrador:</label>
+										<div class="col-sm-9 col-xs-10">
+											{% bootstrap_field form.vendedor show_label=False  %}												
+										</div>																
+								  </div>
 									<div class="row">
 								       <label class="control-label col-sm-2 col-xs-2" for="id_fecha_cpb">Fecha Cobro:</label>
 								       <div class="col-sm-3 col-xs-3">	{% bootstrap_field form.fecha_cpb show_label=False %}</div>	
