--- a/templates/egresos/ordenpago/cpb_rec_pago_listado.html
+++ b/templates/egresos/ordenpago/cpb_rec_pago_listado.html
@@ -52,6 +52,7 @@
                                       <ul class="dropdown-menu dropdown-menu-default">
                                          <li><a href="{% url 'recibo_ver' id=cpb.id %}"  title="VER" class="modal-detail" data-modal-head="DETALLE {{cpb.cpb_tipo.nombre|upper}} {{cpb}}   Fecha: {{cpb.fecha_cpb|date:'d/m/Y'}}" data-fm-callback="reload"><i class="icon-screen-desktop"></i> Vista Previa</a></li>
                                         <li><a target="_blank" href="{% url 'imprimirPago' id=cpb.pk %}"><i class=" icon-printer"></i> Imprimir</a></li>
+                                        <li><a target="_blank" href="{% url 'imprimirPagoCtaCte' id=cpb.pk %}"><i class=" icon-printer"></i>Imprimir OP CtaCte</a></li>
                                         <li><a href="{% url 'mandarEmail' id=cpb.pk %}"><i class="icon-envelope-open"></i> Enviar por Email</a></li>
                                             <li role="separator" class="divider"></li>  
                                         <li><a href="{% url 'cpb_pago_editar' id=cpb.pk %}"  title="Editar" data-fm-callback="reload" ><i class="icon-note"></i> Editar</a></li>
