--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,8 @@
 {% block extra_css %}
 	<link rel="stylesheet" href="{% static 'css/login.css'%}?{% now "Ymd"%}" type="text/css" />
 {% endblock %}
+{% block extra_js %}
+{% endblock %}
 
 {% block principal %}	
 <body class="login">
