--- a/templates/general/pto_vta/pto_vta_form.html
+++ b/templates/general/pto_vta/pto_vta_form.html
@@ -77,7 +77,9 @@
 													    </div>
 													    <div class="row cerca">
 													    	<div class="col-sm-6">{% bootstrap_field form.fe_electronica %}</div>
-															
+														</div>
+														<div class="row cerca">
+													    	<div class="col-sm-6">{% bootstrap_field form.leyenda %}</div>
 														</div>
 													</div>
 													<div class="col-sm-6">    
